apps/httphelper/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httphelper-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httphelper-app
  template:
    metadata:
      labels:
        app: httphelper-app
    spec:
      imagePullSecrets:
      - name: container-registry-credentials # Secret containing the GitLab registry credentials
      containers:
      - name: httphelper-app
        image: registry.gitlab.com/lucascajal1/k8s/http-helper:0.0.1
