apps/httphelper/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httphelper-unsecured-ingress
spec:
  rules:
  - host: httphelper-unsecured.lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: httphelper-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httphelper-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
spec:
  rules:
  - host: "httphelper.lucascajal.com" # change to your domain
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oidc-proxy
            port:
              number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httphelper-ingress
  annotations:
    # Auth annotations
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization" # Passthrough the Authorization header to the backend
spec:
  rules:
  - host: httphelper.lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: httphelper-service
            port:
              number: 8080
